Fixing stacking context-related visual bug for loading spinner z-index

--- a/css/app.css
+++ b/css/app.css
@@ -49,7 +49,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: $gray-lightest;
-    transform: translate3d(0,0,0);
 }
 
 .content {
@@ -62,7 +61,6 @@ body {
     transition: $menu-transition;
     -webkit-overflow-scrolling: touch;
     -webkit-backface-visibility: visible;
-    transform: translate3d(0,0,0);
 
     @media screen and (--screen-sm) {
         padding: 20px;
@@ -78,8 +76,6 @@ body {
         position: absolute;
         left: $menu-width;
         width: 100%;
-        transform: translate3d(0,0,0);
-
     }
 }
 
@@ -90,7 +86,6 @@ body {
     min-height: calc(100% - 58px);
     display: flex;
     overflow-x: hidden;
-    transform: translate3d(0,0,0);
 
     & > span {
         display: flex;
