--- a/css/components/Loading.css
+++ b/css/components/Loading.css
@@ -7,29 +7,36 @@
     left: 0;
     width: 100%;
     height: calc(100% + 1px);
-    background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    z-index: 9999;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.3);
 
     &.hide {
         display: none;
     }
 }
 
+.loader-bkg {
+    background: rgba(255, 255, 255, 0.9);
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+}
+
 /**
  * From: http://projects.lukehaas.me/css-loaders/
  */
 .loader {
-  margin: 60px auto;
+/*  margin: 60px auto;*/
   font-size: 6px;
   position: relative;
   text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #ffffff;
+  border-top: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-right: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-left: 1.1em solid #444;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
